# binge

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: run_tests.yml
binge/: __init__.py  api_connector.py  database.py  forms.py  manage.py  routes.py  run.py
binge/app/: api_connector.py  forms.py  routes.py  run.py
binge/app/templates/: about.html  answer.html  find.html  home.html  index.html  title.html
binge/binge/: asgi.py  settings.py  urls.py  wsgi.py
binge/requester/: api_connector.py  apps.py
binge/templates/: base.html  home.html  title.html
binge/tests/: test_api_connector.py  testing_responses.py
tests/: conftest.py  test_api_connector.py  test_database.py  test_routes.py  testing_api_responses.py  testing_endpoint_responses.py
