[tool.poetry]
name = "binge"
version = "0.1.0"
description = ""
authors = ["kundziorro <mateusz.baranczyk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
black = "^22.10.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
requests = "^2.28.1"
pytest = "^7.2.0"
Flask-WTF = "^1.0.1"
WTForms = "^3.0.1"
pytest-cov = "^4.0.0"
Flask-Session = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
